Update BasicAuthWebServer.java